force-app/main/default/objects/Feature_Flag__mdt/fields/Flag_Value__c.field-meta.xml
<CustomField>
    <fullName>Flag_Value__c</fullName>
    <label>Flag Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>