force-app/main/default/objects/Feature_Flag__mdt/fields/isEnabled__c.field-meta.xml
<CustomField>
    <fullName>isEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this feature is enabled</description>
    <label>isEnabled</label>
    <type>Checkbox</type>
</CustomField>