force-app/main/default/objects/Feature_Flag__mdt/fields/isEnabled_After__c.field-meta.xml
<CustomField>
    <fullName>isEnabled_After__c</fullName>
    <description>true if this feature is enabled on or after a given date</description>
    <label>isEnabled On or After a given date</label>
    <type>Date</type>
</CustomField>